# moabdb-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  static.yml
Docs/source/: conf.py  index.rst
Docs/source/_static/: custom.css
docs/: README.md  make.bat  moabdb.html
docs/source/: api.rst  conf.py  datasets.rst  get_equity2.py  getting_started.md  index.rst  moabdb.rst  tutorial.rst
docs/source/_static/: custom.css
docs/source/_templates/: page.html
docs/source/api/: financial_statements.rst  get_bs.rst  get_cf.rst  get_equity.rst  get_financials.rst  get_is.rst  get_options.rst  get_rates.rst  login.rst
docs/source/data_functions/: get_equity.rst  get_rates.rst
docs/source/datasets/: equity.rst  financials_balancesheet.rst  financials_cashflows.rst  financials_income.rst  interest_rates.rst  options.rst
docs/source/pages/: datasets.md  equity.rst  get_equity.rst  get_rates.rst  rates.rst
docs/source/tutorial/: candlesticks.rst  ex0_install.rst  ex1_plot.rst  ex2_plot_intraday.rst  example1_plot.rst  installation.rst  intraday_plot.rst  quickstart.rst  return_distributions.rst  simple_example.rst  simple_plot.rst  simple_returns.rst
moabdb/: __init__.py  constants.py  core.py  errors.py  get_equity.py  get_rates.py  get_treasuries.py  globals.py  lib.py  proto_wrapper.py  protocol_pb2.py  timewindows.py
moabdx/: __init__.py  body.py  errors.py  globals.py  lib.py  protocol.py
tests/: test.py
